service-mesh/istio/ecommerce-app.yaml
##################################################################################################
# Api service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: ecommerce-example
  labels:
    app: api
    service: api
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: api
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api
  namespace: ecommerce-example
  labels:
    app: api
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      # annotations:
      #   sidecar.istio.io/bootstrapOverride: "istio-signalfx-bootstrap-config"
      labels:
        trace: disabled
        # agentEndpoint: "true"
        app: api
        version: v1
    spec:
      containers:
      - name: api
        image: DOCKER_REPO:api
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
---
##################################################################################################
# Cart service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: cart
  namespace: ecommerce-example
  labels:
    app: cart
    service: cart
spec:
  ports:
  - port: 5001
    name: http
  selector:
    app: cart
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cart
  namespace: ecommerce-example
  labels:
    app: cart
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/bootstrapOverride: "istio-signalfx-bootstrap-config"
      labels:
        # trace: disabled
        # agentEndpoint: "true"
        app: cart
        version: v1
    spec:
      containers:
      - name: cart
        image: DOCKER_REPO:cart
        imagePullPolicy: Always
        ports:
        - containerPort: 5001
---
##################################################################################################
# Checkout service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: checkout
  namespace: ecommerce-example
  labels:
    app: checkout
    service: checkout
spec:
  ports:
  - port: 5002
    name: http
  selector:
    app: checkout
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: checkout
  namespace: ecommerce-example
  labels:
    app: checkout
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/bootstrapOverride: "istio-signalfx-bootstrap-config"
      labels:
        # trace: disabled
        # agentEndpoint: "true"
        app: checkout
        version: v1
    spec:
      containers:
      - name: checkout
        image: DOCKER_REPO:checkout
        imagePullPolicy: Always
        ports:
        - containerPort: 5002
---
##################################################################################################
# Payment service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: ecommerce-example
  labels:
    app: payment
    service: payment
spec:
  ports:
  - port: 5003
    name: http
  selector:
    app: payment
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: payment
  namespace: ecommerce-example
  labels:
    app: payment
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/bootstrapOverride: "istio-signalfx-bootstrap-config"
      labels:
        # trace: disabled
        # agentEndpoint: "true"
        app: payment
        version: v1
    spec:
      containers:
      - name: payment
        image: DOCKER_REPO:payment
        imagePullPolicy: Always
        ports:
        - containerPort: 5003
---
##################################################################################################
# Refreshdb service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: refreshdb
  namespace: ecommerce-example
  labels:
    app: refreshdb
    service: refreshdb
spec:
  ports:
  - port: 5008
    name: http
  selector:
    app: refreshdb
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: refreshdb
  namespace: ecommerce-example
  labels:
    app: refreshdb
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/bootstrapOverride: "istio-signalfx-bootstrap-config"
      labels:
        # trace: disabled
        # agentEndpoint: "true"
        app: refreshdb
        version: v1
    spec:
      containers:
      - name: refreshdb
        image: DOCKER_REPO:refresh
        imagePullPolicy: Always
        ports:
        - containerPort: 5008
---
##################################################################################################
# Catalog services
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: catalog
  namespace: ecommerce-example
  labels:
    app: catalog
    service: catalog
spec:
  ports:
  - port: 5004
    name: http
  selector:
    service: catalog
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: catalog-v1
  namespace: ecommerce-example
  labels:
    app: catalog
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/bootstrapOverride: "istio-signalfx-bootstrap-config"
      labels:
        # trace: disabled
        # agentEndpoint: "true"
        service: catalog
        app: catalog-v1
        version: v1
    spec:
      containers:
      - name: catalog
        image: DOCKER_REPO:catalog
        imagePullPolicy: Always
        ports:
        - containerPort: 5004
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: catalog-v2
  namespace: ecommerce-example
  labels:
    app: catalog
    version: v2
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/bootstrapOverride: "istio-signalfx-bootstrap-config"
      labels:
        # trace: disabled
        # agentEndpoint: "true"
        service: catalog
        app: catalog-v2
        version: v2
    spec:
      containers:
      - name: catalog
        image: DOCKER_REPO:catalog
        imagePullPolicy: Always
        ports:
        - containerPort: 5004
---
### Requestgen
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: default
  name: requestgen
  labels:
    app: requestgen
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: requestgen
        version: v1
    spec:
      containers:
      - name: requestgen
        image: DOCKER_REPO:requestgen
        imagePullPolicy: Always
---
