service-mesh/istio/catalog-100-0.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalog
spec:
  hosts:
    - catalog
  http:
  - route:
    - destination:
        host: catalog
        subset: v1
      weight: 100
    - destination:
        host: catalog
        subset: v2
      weight: 0
